<resources>
    <string name="app_name">Event Check-In Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_your_name_here">Edit your name here</string>
    <string name="please_fill_the_fields_below">Please fill the fields below</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_middle_name">Enter middle name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="edit_my_name">Edit my name</string>
    <string name="picpic">picpic</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="activate_account">Activate Account</string>
    <string name="institutional_email">Enter ID number or IE</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="course">Course</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="student_id">Student ID</string>
    <string name="please_wait_while_the_app_is_loading">Please wait while the app is loading…</string>
    <string name="attendance">Attendance</string>
    <string name="early_attendance">Early Attendance</string>
    <string name="caps_course">COURSE</string>
    <string name="edit_name">Edit name</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="reset_password">Reset Password</string>
    <string name="_0_0">0/0</string>
    <string name="update_face">Update Face</string>
    <string name="get_started">GET STARTED</string>
    <string name="change_name">Are you sure you want to change your name?</string>
    <string name="yes_change_name">Yes, Change Name</string>
    <string name="no_back">No, Go back</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="event">Event</string>
    <string name="fill_fields">Please fill the fields below</string>
    <string name="schedule_an_event">Schedule an event</string>
    <string name="enter_event_details">Enter the event title</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_the_start_time">Pick the start time</string>
    <string name="pick_the_location">Pick the location</string>
    <string name="schedule_event">Schedule Event</string>
    <string name="_0">0</string>
    <string name="event_count">Event Count</string>
    <string name="host">HOST</string>
    <string name="logout">Logout</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_student_number">Enter Student Number</string>
    <string name="are_you_sure_that_you_want_to_change_your_password">Are you sure that you want to change your password?</string>
    <string name="yes_change_password">Yes, change password</string>
    <string name="next">Next</string>
    <string name="activate_your_account">Activate your account</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="not_an_employee">Not an employee?</string>
    <string name="no_upcoming_event">No upcoming event</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="radius">Radius:</string>
    <string name="history">History</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="pick_a_new_date">Pick a new date</string>
    <string name="enter_new_event_title">Enter new event title</string>
    <string name="pick_a_new_time">Pick a new time</string>
    <string name="pick_a_new_status">Pick a new status</string>
    <string name="pick_a_new_location">Pick a new location</string>
    <string name="edit_the_event_of">Edit the event of</string>
    <string-array name="sort_options">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

</resources>