<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/LAST_NAME_TXT"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:hint="@string/last_name"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/baseline_person_24"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/FIRST_NAME_TXT"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:hint="@string/first_name"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/baseline_person_24"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/MIDDLE_NAME_TXT"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:hint="@string/middle_name"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/baseline_person_24"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/EMAIL_TXT_UP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:hint="@string/institutional_email"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/email"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:autofillHints="" />

            <EditText
                android:id="@+id/STUDENT_ID"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color"
                android:hint="@string/student_id"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/email"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:autofillHints="" />

            <EditText
                android:id="@+id/COURSE"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/course"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textColor="@color/app_color"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/PASSWORD_TXT_UP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColor="@color/app_color"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/password"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:autofillHints="" />

            <EditText
                android:id="@+id/CONFIRM_PASSWORD_TXT"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColor="@color/app_color"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:backgroundTint="@color/app_color"
                android:drawableStart="@drawable/password"
                android:paddingHorizontal="10dp"
                android:drawablePadding="10dp"
                android:maxLines="1"
                android:autofillHints="" />

            <Button
                android:id="@+id/SIGN_UP_BTN"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/app_color_rounded_bg_no_stroke"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="23sp"
                android:layout_marginBottom="50dp"
                />

        </LinearLayout>

    </ScrollView>



</LinearLayout>