<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".activities.host.ActivateEmployeeAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_stroke_bg_white">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/activate_your_account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/light_blue"/>

        <EditText
            android:id="@+id/EMPLOYEE_ID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_employee_id"
            android:inputType="text"
            android:textSize="21sp"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/student_id"
            android:backgroundTint="@color/light_blue"
            android:textColorHint="#D3D3D3"
            android:drawablePadding="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/NOT_EMPLOYEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_an_employee"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#D3D3D3"
                android:layout_marginTop="3dp" />

        </LinearLayout>

        <Button
            android:id="@+id/CHECK_EMPLOYEE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textColor="@color/light_blue"
            android:background="@drawable/app_color_rounded_bg"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</LinearLayout>
