<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".fragments.host.AccountFragment">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_color_rounded_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/NAME_ACR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:text="FL"
            android:textStyle="bold"
            android:textSize="60sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/account_card"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/HOST_FULL_NAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/firstname_lastname"
            android:textColor="@color/light_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ROLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/host"
            android:textColor="@color/light_blue"
            android:textSize="22sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/EVENT_COUNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/_0"
                android:textColor="@color/light_blue"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/event_count"
                android:textColor="@color/light_blue"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/HOST_HISTORY"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rounded_stroke_bg_white"
                android:maxLines="1"
                android:textColor="@color/light_blue"
                android:text="@string/history"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/HOST_RESET_PASSWORD"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_stroke_bg_white"
                android:maxLines="1"
                android:textColor="@color/light_blue"
                android:text="@string/reset_password"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/LOGOUT"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_stroke_bg_white"
                android:maxLines="1"
                android:textColor="@color/light_blue"
                android:text="@string/logout"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>