<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@drawable/edit_name"
    android:orientation="vertical"
    tools:context=".activities.student.ActivateStudentAccountActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/activate_your_account"
        android:textSize="30sp"
        android:layout_marginTop="180dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/STUDENT_NUMBER"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_student_number"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/student_id"
        android:drawablePadding="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/NOT_STUDENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not a student?"
            android:textSize="21sp"
            android:textStyle="normal"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/CHECK_STUDENT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/app_color_rounded_bg_no_stroke"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>

</LinearLayout>