<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ConfirmActivity"
    android:background="@drawable/edit_name"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="174dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="192dp"
        android:text="@string/are_you_sure_that_you_want_to_change_your_password"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/CONFIRM"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/yes_change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck"
        android:background="@drawable/app_color_rounded_bg_no_stroke"
        />

    <Button
        android:id="@+id/CANCEL"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/no_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_rounded_bg_no_stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="235dp"
            android:layout_height="200dp"
            android:src="@drawable/second_step"
            android:layout_marginHorizontal="20dp" />

    </LinearLayout>

</LinearLayout>