<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:background="@color/secondary_color"
    tools:context=".activities.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/change_your_password"
            android:textColor="@color/light_blue"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/please_fill_the_fields_below"
            android:textColor="@color/light_blue"
            android:textSize="17sp" />

        <ScrollView
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/OLD_PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:autofillHints=""
                    android:hint="@string/enter_old_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/light_blue"
                    android:backgroundTint="@color/light_blue"
                    android:textColorHint="#D3D3D3"
                    android:textSize="27sp" />

                <EditText
                    android:id="@+id/NEW_PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:autofillHints=""
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/light_blue"
                    android:backgroundTint="@color/light_blue"
                    android:textColorHint="#D3D3D3"
                    android:textSize="27sp" />

                <EditText
                    android:id="@+id/RE_ENTER_NEW_PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:autofillHints=""
                    android:hint="@string/re_enter_new_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/light_blue"
                    android:backgroundTint="@color/light_blue"
                    android:textColorHint="#D3D3D3"
                    android:textSize="27sp" />

                <Button
                    android:id="@+id/CHANGE_PASSWORD_BTN"
                    android:layout_width="270dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/app_color_rounded_bg_no_stroke"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/light_blue"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    tools:ignore="TextContrastCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="32dp"
                        android:src="@drawable/edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit"
                        android:textColor="@color/light_blue"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="32dp"
                        android:src="@drawable/confirm_grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Confirm"
                        android:textColor="#D3D3D3"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>